--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MediSearch</string>
+    <string name="baseUrl">http://192.168.1.3:8000/</string>
 </resources>
